--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -144,6 +144,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="block-001.c4" />
+    <None Include="block-002.c4" />
+    <None Include="block-003.c4" />
+    <None Include="block-006.c4" />
     <None Include="core.c4" />
     <None Include="makefile" />
     <None Include="README.md" />
