--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -147,6 +147,7 @@
     <None Include="block-001.c4" />
     <None Include="block-002.c4" />
     <None Include="block-003.c4" />
+    <None Include="block-005.c4" />
     <None Include="block-006.c4" />
     <None Include="core.c4" />
     <None Include="makefile" />
