--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -149,6 +149,7 @@
     <None Include="block-003.c4" />
     <None Include="block-005.c4" />
     <None Include="block-004.c4" />
+    <None Include="block-099.c4" />
     <None Include="makefile" />
     <None Include="README.md" />
     <None Include="block-200.c4" />
