--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -144,12 +144,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="block-001.c4" />
-    <None Include="block-002.c4" />
     <None Include="block-003.c4" />
     <None Include="block-005.c4" />
     <None Include="block-004.c4" />
-    <None Include="block-099.c4" />
+    <None Include="block-020.c4" />
+    <None Include="block-021.c4" />
+    <None Include="block-022.c4" />
+    <None Include="block-023.c4" />
+    <None Include="block-024.c4" />
+    <None Include="block-025.c4" />
+    <None Include="block-026.c4" />
+    <None Include="block-999.c4" />
+    <None Include="c4.ino" />
+    <None Include="LICENSE" />
     <None Include="makefile" />
     <None Include="README.md" />
     <None Include="block-200.c4" />
