--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -145,23 +145,23 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <None Include=".gitignore" />
-    <None Include="block-003.f" />
-    <None Include="block-004.f" />
-    <None Include="block-005.f" />
-    <None Include="block-006.f" />
-    <None Include="block-010.f" />
-    <None Include="block-014.f" />
-    <None Include="block-015.f" />
-    <None Include="block-020.f" />
-    <None Include="block-021.f" />
-    <None Include="block-022.f" />
-    <None Include="block-023.f" />
-    <None Include="block-024.f" />
-    <None Include="block-025.f" />
-    <None Include="block-026.f" />
-    <None Include="block-200.f" />
-    <None Include="block-999.f" />
-    <None Include="bootstrap.f" />
+    <None Include="block-003.fth" />
+    <None Include="block-004.fth" />
+    <None Include="block-005.fth" />
+    <None Include="block-006.fth" />
+    <None Include="block-010.fth" />
+    <None Include="block-014.fth" />
+    <None Include="block-015.fth" />
+    <None Include="block-020.fth" />
+    <None Include="block-021.fth" />
+    <None Include="block-022.fth" />
+    <None Include="block-023.fth" />
+    <None Include="block-024.fth" />
+    <None Include="block-025.fth" />
+    <None Include="block-026.fth" />
+    <None Include="block-200.fth" />
+    <None Include="block-999.fth" />
+    <None Include="bootstrap.fth" />
     <None Include="LICENSE" />
     <None Include="makefile" />
     <None Include="README.md" />
