--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 c4
 c4-32
-block-099.c4
+block-099.fth
 /x64
 /Debug
 /Release
 /c4.vcxproj.user
 .vscode
-/block-999.c4
+/block-999.fth
 /enc_temp_folder/
