--- a/c4.vcxproj
+++ b/c4.vcxproj
@@ -144,21 +144,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="block-003.c4" />
-    <None Include="block-005.c4" />
-    <None Include="block-004.c4" />
-    <None Include="block-020.c4" />
-    <None Include="block-021.c4" />
-    <None Include="block-022.c4" />
-    <None Include="block-023.c4" />
-    <None Include="block-024.c4" />
-    <None Include="block-025.c4" />
-    <None Include="block-026.c4" />
-    <None Include="block-999.c4" />
+    <None Include=".gitignore" />
+    <None Include="block-003.fth" />
+    <None Include="block-004.fth" />
+    <None Include="block-005.fth" />
+    <None Include="block-006.fth" />
+    <None Include="block-010.fth" />
+    <None Include="block-014.fth" />
+    <None Include="block-015.fth" />
+    <None Include="block-020.fth" />
+    <None Include="block-021.fth" />
+    <None Include="block-022.fth" />
+    <None Include="block-023.fth" />
+    <None Include="block-024.fth" />
+    <None Include="block-025.fth" />
+    <None Include="block-026.fth" />
+    <None Include="block-200.fth" />
+    <None Include="block-999.fth" />
+    <None Include="bootstrap.fth" />
     <None Include="LICENSE" />
     <None Include="makefile" />
     <None Include="README.md" />
-    <None Include="block-200.c4" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="c4.c" />
